<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>

        <variable
            name="profileViewModel"
            type="com.bramdeconinck.technologysalesmantoolkit.viewmodels.ProfileViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:theme="@style/PrimaryBackground"
        tools:context=".fragments.ProfileFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:animateLayoutChanges="true">

                <android.support.constraint.Guideline
                    android:id="@+id/gl_profile_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.11"/>

                <android.support.constraint.Guideline
                    android:id="@+id/gl_profile_89"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.89"/>

                <ImageView
                    android:id="@+id/iv_profile_profile_picture"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:layout_marginTop="48dp"
                    android:contentDescription="@string/description_profile_picture"
                    app:layout_constraintEnd_toEndOf="@+id/gl_profile_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_profile_11"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/default_profile_picture" />

                <TextView
                    android:id="@+id/tv_profile_fullname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/placeholder_profile_fullname"
                    android:textColor="@android:color/white"
                    android:textSize="26sp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/gl_profile_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_profile_11"
                    app:layout_constraintTop_toBottomOf="@id/iv_profile_profile_picture" />


                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_profile_form"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="18dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:background="@drawable/form_blue_background"
                    android:animateLayoutChanges="true"
                    app:layout_constraintEnd_toEndOf="@+id/gl_profile_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_profile_11"
                    app:layout_constraintTop_toBottomOf="@id/tv_profile_fullname" >

                    <EditText
                        android:id="@+id/et_profile_firstname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:inputType="textPersonName"
                        android:hint="@string/placeholder_firstname"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="16sp"
                        android:paddingEnd="20dp"
                        android:textColor="@drawable/profile_disabled_edit_text"
                        android:ems="10"
                        android:enabled="@{safeUnbox(profileViewModel.isEditable)}"
                        android:text="@={profileViewModel.firstname}"
                        android:background="@drawable/form_field_rounded_background"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingStart="12dp"
                        android:drawableStart="@drawable/ic_account_circle_gray_24dp"
                        android:drawablePadding="6dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/et_profile_familyname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:inputType="textPersonName"
                        android:hint="@string/placeholder_lastname"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="16sp"
                        android:paddingEnd="20dp"
                        android:textColor="@drawable/profile_disabled_edit_text"
                        android:ems="10"
                        android:enabled="@{safeUnbox(profileViewModel.isEditable)}"
                        android:text="@={profileViewModel.familyname}"
                        android:background="@drawable/form_field_rounded_background"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingStart="12dp"
                        android:drawableStart="@drawable/ic_people_gray_24dp"
                        android:drawablePadding="6dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_profile_firstname"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/et_profile_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/placeholder_email"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="16sp"
                        android:paddingEnd="20dp"
                        android:textColor="@drawable/profile_disabled_edit_text"
                        android:ems="10"
                        android:enabled="@{safeUnbox(profileViewModel.isEditable)}"
                        android:text="@={profileViewModel.email}"
                        android:background="@drawable/form_field_rounded_background"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingStart="12dp"
                        android:drawableStart="@drawable/ic_email_gray_24dp"
                        android:drawablePadding="6dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_profile_familyname"
                        tools:ignore="Autofill" />

                    <Button
                        android:id="@+id/btn_profile_edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title_action_edit_profile"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textAllCaps="false"
                        android:background="@drawable/form_button_rounded_background"
                        android:visibility="@{safeUnbox(profileViewModel.isEditable) ? View.VISIBLE : View.GONE}"
                        android:onClick="@{() -> profileViewModel.validateProfileForm()}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_profile_email" />

                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_profile_change_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:onClick="@{() -> profileViewModel.resetPassword()}"
                    android:text="@string/label_change_password"
                    android:textColor="@color/colorClickableLabel"
                    android:visibility="@{safeUnbox(profileViewModel.isEditable) ? View.GONE : View.VISIBLE}"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/gl_profile_89"
                    app:layout_constraintStart_toStartOf="@+id/gl_profile_11"
                    app:layout_constraintTop_toBottomOf="@id/cl_profile_form" />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

    </FrameLayout>

</layout>