...
    <string name="button_login_sign_in_with_google">Meld aan met Google</string>
    <string name="message_welcome">Welkom, %1$s!</string>
    <string name="placeholder_email">E-mailadres</string>
    <string name="placeholder_password">Wachtwoord</string>
    <string name="description_app_logo">Logo of Technology Salesmen Toolkit</string>
    <string name="error_email_is_not_verified">Gelieve uw e-mailadres te bevestigen aan de hand van de verzonden e-mail.</string>
    <string name="error_empty_fields">"Gelieve alle velden in te vullen."</string>

    <!-- RegistrationFragment -->
    <string name="button_registration_create_account">Maak account aan</string>
    <string name="placeholder_firstname">Voornaam</string>
    <string name="placeholder_lastname">Familienaam</string>
    <string name="placeholder_repeatpassword">Herhaal wachtwoord</string>
    <string name="message_account_created">Uw account werd succesvol aangemaakt!</string>
    <string name="error_account_not_created">Er is iets fout gelopen tijdens het aanmaken van uw account. Gelieve het opnieuw te proberen.</string>
    <string name="error_invalid_email">Gelieve een geldig e-mailadres in te voeren.</string>
    <string name="error_invalid_password">Gelieve een wachtwoord van meer dan 6 karakters in te voeren.</string>
    <string name="error_passwords_dont_match">De twee ingevoerde wachtwoorden komen niet overeen.</string>

    <!-- ServiceListFragment -->
    <string name="search_hint">Zoek hier…</string>
    <string name="title_action_filter_everything">Toon alles</string>
...

    <!-- ProfileFragment -->
    <string name="title_action_edit_profile">Wijzig profiel</string>
    <string name="title_action_stop_editing_profile">Stop met wijzigen profiel</string>
    <string name="placeholder_profile_fullname">Andy Droidon</string>
    <string name="description_profile_picture">Profielfoto van de gebruiker</string>
    <string name="title_change_password">Wachtwoord wijzigen</string>
    <string name="message_change_password">Bent u zeker dat u uw wachtwoord wilt wijzigen? Als u op \'Ja\' drukt, zal er een e-mail verzonden worden waarmee uw wachtwoord opnieuw ingesteld kan worden.</string>
    <string name="change_password_succes">Er werd een e-mail naar u verzonden waarmee u uw wachtwoord kunt wijzigen.</string>
    <string name="change_password_failure">Er is een fout opgetreden tijdens het proberen versturen van de e-mail.</string>
    <string name="title_change_profile">Profiel wijzigen</string>
    <string name="message_change_profile">Bent u zeker dat u uw profiel wilt wijzigen?</string>
    <string name="title_change_name">"Naam wijzigen"</string>
    <string name="message_change_name">Uw naam werd succesvol gewijzigd.</string>
    <string name="error_change_name">Er is een fout opgetreden tijdens het wijzigen van uw naam.</string>
    <string name="title_change_email">"E-mailadres wijzigen"</string>
    <string name="message_change_email">Uw e-mailadres werd succesvol gewijzigd.</string>
...
